worked on essay, created shorter web scraping file for professors

--- a/web_scraping/college_majors_across_america_comp_essay.ipynb
+++ b/web_scraping/college_majors_across_america_comp_essay.ipynb
@@ -4,32 +4,87 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The Most Popular College Major Across Different States\n",
+    "# Distribution of College Majors Across Tops Schools in America\n",
     "Authors:  Rucha, Emma, Jiayuan\n",
     "\n",
     "## Introduction\n",
     "\n",
-    "College students take multiple factors into consideration when choosing their majors. Some of these factors are ranking of majors in their college, potential future career path and salary, personal interest, etc. But are there any correlations between students' choices of major and the states that they study in? In this computational essay, we try to explore the answer to this question and discuss the methods we used to anaylize the statistics of students' major choices in different states. \n",
+    "College students take multiple factors into consideration when choosing their majors. Some of these factors are ranking of majors in their college, potential future career path and salary, personal interest, etc. But are there any correlations between students' choices of major at top schools and the states that they study in? In this computational essay, we try to explore the answer to this question and discuss the methods we used to anaylize the statistics of students' major choices in different states. \n",
     "\n",
-    "Understanding the correlation between state and popular major choice will explain to us how location, state policy and culture impact career options in many colleges. This might potentially be useful for students who are applying for college by helping them gain insight about the distribution of learning resources across the US for different majors. \n",
+    "**Question:** Is there a correlation between the choice of major by students at top colleges and the state they study in? \n",
     "\n",
-    "The three main steps we took in this project are scrapping data, organizing data, and visulizing data; each being documented in details in the sections below.\n",
+    "Here, top colleges is defined as the top 10% of colleges in each state as ranked by Niche.com.\n",
+    "\n",
+    "Understanding the correlation between state and popular major choice will explain to us how location, state policy and culture impact major choices in many colleges across America. This could potentially be useful for students who are applying for college by helping them gain insight into the distribution of learning resources across the US for different majors. Additionally, companies who are hiring for specific majors could understand whether there are certain locations to target their resources towards.\n",
+    "\n",
+    "The three main steps we took in this project were web scrapping the data, cleaning and organizing the data, and visulizing the data for results. Each being documented in details in the sections below.\n",
     "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "Here are the import statements for our code which will ensure the essay runs properly:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import data_cleaning\n",
+    "import data_visualization\n",
+    "\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<br>\n",
     "\n",
     "## Methodology\n",
     "### 1. Scrapping Data\n",
-    "We scrapped our data by programmatically downloading it from niche.com, a well-known college evaluation website, (with the usage of agent, Google cache, and VPN to avoid being blocked by the website.) \n",
-    "Next, we found the total number of colleges displayed on niche, and loop through the top 10% ranked colleges to get the number of graduates in each major. The ranking provided by niche, although probably biased and does not always reflect a college's true value, gives us a list of over-all more influencial schools in each state.\n",
-    "While looping through different states and the top colleges in them, we stored data in a list that contains four columns: `State` , `Major` , `College` , `Student Number`, which is then added into a .csv file created by Pandas.\n",
-    "In total, we recorded 5676 majors in 575 colleges across 50 states.\n",
+    "We scrapped our data by programmatically accessing pages from `niche.com`, a well-known college evaluation website (with the usage of an agent, time delays and a VPN to avoid being blocked by the website). \n",
     "\n",
-    "<br>\n",
+    "We began by scraping the website for the college list for each state in the US. This included public and private schools as well as trade schools. For each state, we gathered the first page of results. From here, we found the total number of colleges displayed on Niche for each state and programmatically looped through the `top 10%` ranked colleges from the list to get the number of students in each major. The ranking provided by niche, although probably biased and not completely reflective of a college's true value, gives us a list of the overall more influencial schools in each state. The data extracted for each of the top 10% of schools in each state was saved into csv in the folder `raw_data`.\n",
+    "\n",
+    "Each csv had a similar format with four columns: `State` , `Major` , `College` , `Student Number`.\n",
+    "\n",
+    "In total, we recorded 324 majors in 575 colleges across 50 states.\n",
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "### 2. Organizing Data\n",
-    "We first sorted all majors into 53 categories using a dictionary. For example, majors like `Acting`, `Theatre Design`, `Dance`, `Drama and Theatre Production`, `Voice and Opera`, `Conducting`, `Music Performance`, and `Cinematography and Video Production` can be found under the key `Performance Arts`.\n",
+    "\n",
+    "We first began by concatenating every data file we had into a single file called `combined_data.csv`. This allowed us to more easily access the all of the data at once.\n",
+    "\n",
+    "We manually sorted all the majors into 53 categories, which were organized into a dictionary. For example, majors like `Acting`, `Theatre Design`, `Dance`, and `Drama and Theatre Production` can be found under the key `Arts`.\n",
+    "\n",
+    "To find all the majors for this sorting, we ran the following code:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
     "Then, we merged the number of students in each major in different schools into a .csv file that contains the total number of students in each major in each state.\n",
-    "Further more, we created a .csv file that contains the total number of students in each major in the whole nation.\n"
+    "\n",
+    "Further more, we created a .csv file that contains the total number of students in each major in the whole nation."
    ]
   },
   {
@@ -51,11 +106,6 @@
     }
    ],
    "source": [
-    "import matplotlib as mpl\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
-    "\n",
     "plt.rcParams [\"figure.figsize\"] = (15, 12) \n",
     "df = pd.read_csv (r'/home/jliu2/niche-major-finder/web_scraping/cleaned_data/broader_major_whole_country.csv')\n",
     "majors = df[\"Major\"]\n",
@@ -91,7 +141,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4
  },
