--- a/web_scraping/college_majors_across_america_comp_essay.ipynb
+++ b/web_scraping/college_majors_across_america_comp_essay.ipynb
@@ -9,15 +9,15 @@
     "\n",
     "## Introduction\n",
     "\n",
-    "College students take multiple factors into consideration when choosing their majors. Some of these factors are ranking of majors in their college, potential future career path and salary, personal interest, etc. But are there any correlations between students' choices of major at top schools and the states that they study in? In this computational essay, we try to explore the answer to this question and discuss the methods we used to anaylize the statistics of students' major choices in different states. \n",
+    "College students take multiple factors into consideration when choosing their majors. Some of these factors are ranking of majors in their college, potential future career path and salary, personal interest, etc. But are there any correlations between students' choices of major at top schools and the states that they study in? In this computational essay, we tried to explore the answer to this question and discuss the methods we used to anaylize the statistics of students' major choices in different states. \n",
     "\n",
     "**Question:** Is there a correlation between the choice of major by students at top colleges and the state they study in? \n",
     "\n",
-    "Here, top colleges is defined as the top 10% of colleges in each state as ranked by Niche.com.\n",
+    "Here, top colleges is defined as the top 10% of colleges in each state as ranked by Niche.com. Our goal for this project was to explore the comparision of different majors in top schools across different states and see whether there are any patterns that come to light. We looked at both comparing results for different states and observing patterns across America as a whole.\n",
     "\n",
     "Understanding the correlation between state and popular major choice will explain to us how location, state policy and culture impact major choices in many colleges across America. This could potentially be useful for students who are applying for college by helping them gain insight into the distribution of learning resources across the US for different majors. Additionally, companies who are hiring for specific majors could understand whether there are certain locations to target their resources towards.\n",
     "\n",
-    "The three main steps we took in this project were web scrapping the data, cleaning and organizing the data, and visulizing the data for results. Each being documented in details in the sections below.\n",
+    "The three main steps we took in this project were web scrapping the data, cleaning and organizing the data, and visulizing the data for results. Each is documented in details in the sections below.\n",
     "<br>\n",
     "<br>\n",
     "<br>\n",
@@ -33,10 +33,8 @@
     "import pandas as pd\n",
     "pd.options.mode.chained_assignment = None\n",
     "import numpy as np\n",
-    "import os\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "import data_cleaning\n",
     "# import data_visualization"
    ]
   },
@@ -44,8 +42,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<br>\n",
-    "\n",
     "## Methodology\n",
     "### 1. Scrapping Data\n",
     "We scrapped our data by programmatically accessing pages from `niche.com`, a well-known college evaluation website (with the usage of an agent, time delays and a VPN to avoid being blocked by the website). \n",
@@ -64,6 +60,8 @@
    "source": [
     "\n",
     "### 2. Organizing Data\n",
+    "\n",
+    "All of the organizing work was done through our `runner.py` file. \n",
     "\n",
     "We first began by concatenating every data file we had into a single file called `combined_data.csv`. This allowed us to more easily access the all of the data at once.\n",
     "\n",
@@ -102,25 +100,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Three difference csvs were created to ease the visualization process. They were all placed in the folder `cleaned_data`: \n",
+    "Three difference csvs were created to ease the visualization process. They were all placed in the folder `cleaned_data`. Processing the data as described below was done through Pandas: \n",
     "\n",
     "1. The first csv contained all the data from `combined_data.csv`, except that the major names were replaced with the broader categories that we had assigned. This was called `broader_major_combined_data.csv`\n",
     "\n",
     "2. The second csv summed the number of students in each state that chose to major in a certain topic. For example, all the students in Alabama who majored in Psycology were summed together. This was saved as `broader_major_summed_data.csv`\n",
     "\n",
-    "3. The third csv summed the number of students who majored in a certain topic for all the states. For example, all the students in the US (all states from the list) were summed together. \n",
-    "\n",
-    "\n",
-    "Then, we merged the number of students in each major in different schools into a .csv file that contains the total number of students in each major in each state.\n",
-    "\n",
-    "Further more, we created a .csv file that contains the total number of students in each major in the whole nation."
+    "3. The third csv summed the number of students who majored in a certain topic for all the states. For example, all the students in the US (all states from the list) were summed together. This was saved as `broader_major_whole_country.csv`"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. Visualizing Data\n"
+    "### 3. Visualizing Data\n",
+    "\n",
+    "From the csvs created, we were able to use `matplotlib` to understand our results. From the three csvs listed above, we used the last two csvs (`broader_major_summed_data.csv` and `broader_major_whole_country.csv`). We took the data about the number of students in each state and across the country per major."
    ]
   },
   {
