Finish most of the essay

--- a/web_scraping/college_majors_across_america_comp_essay.ipynb
+++ b/web_scraping/college_majors_across_america_comp_essay.ipynb
@@ -46,7 +46,7 @@
     "### Scrapping Data\n",
     "We scrapped our data by programmatically accessing pages from `niche.com`, a well-known college evaluation website (with the usage of an agent, time delays and a VPN to avoid being blocked by the website). \n",
     "\n",
-    "We began by scraping the website for the college list for each state in the US. This included public and private schools as well as trade schools. For each state, we gathered the first page of results. From here, we found the total number of colleges displayed on Niche for each state and programmatically looped through the `top 10%` ranked colleges from the list to get the number of students in each major. The ranking provided by niche, although probably biased and not completely reflective of a college's true value, gives us a list of the overall more influencial schools in each state. The data extracted for each of the top 10% of schools in each state was saved into csv in the folder `raw_data`.\n",
+    "We began by scraping the website for the college list for each state in the US. This included public and private schools as well as trade schools. For each state, we gathered the first page of results. From here, we found the total number of colleges displayed on Niche for each state and programmatically looped through the `top 10%` ranked colleges from the list to get the number of students in each major. The ranking provided by Niche, although probably biased and not completely reflective of a college's true value, gives us a list of the overall more influencial schools in each state. The data extracted for each of the top 10% of schools in each state was saved into csv in the folder `raw_data`.\n",
     "\n",
     "Each csv had a similar format with four columns: `State` , `Major` , `College` , `Student Number`.\n",
     "\n",
@@ -172,7 +172,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the three graphs above, we concluded that the ratio of students in different majors varies significantly across state. We inferred that this difference could be due to the difference in state's economics structure, physical rescources, or career opportunities. But also this result is strongly biased based on the way we categorized majors and niche ranks colleges with certain metrics.\n"
+    "From the three graphs above, we concluded that the ratio of students in different majors varies significantly across state. We inferred that this difference could be due to the difference in state's economics structure, physical rescources, or career opportunities. But also this result is strongly biased based on the way we categorized majors and Niche ranks colleges with certain metrics.\n"
    ]
   },
   {
@@ -184,12 +184,23 @@
     "[insert comparison graph: by number vs by percentage] \n",
     "\n",
     "***\n",
+    "What are the contextual or ethical implications of your topic or work? (leave for Emma)\n",
+    "<br>Because of the subjectiveness of our result, it does not have huge potential of benefiting the society \n",
     "\n",
-    "<What are the important insights that the reader should get from this project?\n",
-    "What are the contextual or ethical implications of your topic or work?\n",
-    "What lessons did you learn as you did the project?\n",
-    "What were the most difficult, challenging, or frustrating parts of the project?\n",
-    "In what ways would you extend or change your project if you had more time?>"
+    "***\n",
+    "\n",
+    "\n",
+    "From this project we learned that:\n",
+    "1. It’s important to continuously test small parts of functions to ensure that errors are fixed early on in the process instead of accumulating\n",
+    "2. When web scraping, we should always be mindful of limitations due to timeout errors and have code written to catch them instead of needing to manually check.\n",
+    "\n",
+    "We address these two points because the main issues we ran into in this project are debugging long, complicated functions and not being able to access Niche webpage. To solve the the first issue, we brock down our codes into functions that can be easily tested by pytest. As for the second issue, we used different tools like agent, google cache, and VPN that changes our IP address, but even then we were only able to get the intending data partially everytime we ran the code, which extended the time for us to get a complete set of data before being able to analyze it. \n",
+    "\n",
+    "If given more time, we would:\n",
+    "1. Automate the process of detecting error caused by being blocked from Niche's webpage server; \n",
+    "2. Include more colleges from each state so that small states with only a few colleges can better represented;\n",
+    "3. Add Hawaii and Alaska to the US state map that we currently have;\n",
+    "4. Create a US state map to show the most popular major of each state."
    ]
   }
  ],
